<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context="colortales.colortalesapp.Cuento">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/dummy_content"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/dummy_button"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dummy_button"
                android:visibility="gone" />

        </LinearLayout>

    </FrameLayout>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ViewFlipper
            android:id="@+id/simpleViewFlipper"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left|bottom"
                android:background="@android:drawable/screen_background_dark_transparent"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="246dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/c1" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|bottom"
                        android:background="@android:drawable/screen_background_dark_transparent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txt_cuento_texto"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/cuento_texto_01"
                            android:textAlignment="center"
                            android:textSize="21sp" />
                    </LinearLayout>
                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left|bottom"
                android:background="@android:drawable/screen_background_dark_transparent"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="246dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/c2" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|bottom"
                        android:background="@android:drawable/screen_background_dark_transparent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txt_cuento_texto"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/cuento_texto_02"
                            android:textSize="21sp" />
                    </LinearLayout>
                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left|bottom"
                android:background="@android:drawable/screen_background_dark_transparent"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="246dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/c3" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|bottom"
                        android:background="@android:drawable/screen_background_dark_transparent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txt_cuento_texto"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/cuento_texto_03"
                            android:textSize="21sp" />
                    </LinearLayout>
                </FrameLayout>

            </LinearLayout>


        </ViewFlipper>

        <ImageButton
            android:id="@+id/btnSig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.947"
            app:layout_constraintLeft_toRightOf="@+id/btnAnt"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.505"
            app:srcCompat="@android:drawable/ic_media_next" />

        <ImageButton
            android:id="@+id/btnAnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/btnSig"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.501"
            app:srcCompat="@android:drawable/ic_media_previous" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>
